--- a/cloud-demo-start/build.gradle
+++ b/cloud-demo-start/build.gradle
@@ -49,13 +49,23 @@ ext {
 dependencies {
 	//compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	//compile('org.springframework.boot:spring-boot-starter-data-ldap')
-	//compile('org.springframework.boot:spring-boot-starter-security')
+	
+	// 该依赖用于编译阶段
 	compile('org.springframework.boot:spring-boot-starter-web')
 
+	// 该依赖用于编译阶段
+	compile('org.springframework.boot:spring-boot-starter-security')
+	
 	// compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	// runtime('org.springframework.boot:spring-boot-devtools')
 	// mybatis
     compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+
+	// 添加 Thymeleaf 的依赖
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+
+	// 添加 OAuth2 的依赖
+	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
 
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.9-rc'
