--- a/cloud-demo-start/build.gradle
+++ b/cloud-demo-start/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.5.RELEASE'
+		springBootVersion = '2.1.0.M4'
 	}
 	repositories {
 		// mavenCentral()
@@ -47,8 +47,8 @@ ext {
 }
 
 dependencies {
-	//compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	//compile('org.springframework.boot:spring-boot-starter-data-ldap')
+
+	//compile('org.springframework.boot:spring-boot-starter-parent:2.1.0.M4')
 	
 	// 该依赖用于编译阶段
 	compile('org.springframework.boot:spring-boot-starter-web')
@@ -56,20 +56,20 @@ dependencies {
 	// 该依赖用于编译阶段
 	compile('org.springframework.boot:spring-boot-starter-security')
 	
-	// compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
-	// runtime('org.springframework.boot:spring-boot-devtools')
 	// mybatis
     compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
 
 	// 添加 Thymeleaf 的依赖
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	
+	// 添加 Thymeleaf Spring Security 依赖，与 Thymeleaf 版本一致都是 3.x
+	compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.2.RELEASE')
 
 	// 添加 OAuth2 的依赖
 	compile('org.springframework.boot:spring-boot-autoconfigure:1.5.2.RELEASE')
 	compile('org.springframework.security.oauth:spring-security-oauth2:2.3.3.RELEASE')
 	//compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
 
-    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.9-rc'
 
     // https://mvnrepository.com/artifact/com.alibaba/fastjson
@@ -78,7 +78,6 @@ dependencies {
     // mybatis-geerator
     // https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core
     compile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.7'
-    
     compile group: 'org.mybatis.generator', name: 'mybatis-generator-maven-plugin', version: '1.3.7' 
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
