--- a/cloud-demo-start/build.gradle
+++ b/cloud-demo-start/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.1.0.M4'
+		springBootVersion = '2.0.5.RELEASE'
 	}
 	repositories {
 		// mavenCentral()
@@ -48,13 +48,16 @@ ext {
 
 dependencies {
 
-	//compile('org.springframework.boot:spring-boot-starter-parent:2.1.0.M4')
-	
 	// 该依赖用于编译阶段
 	compile('org.springframework.boot:spring-boot-starter-web')
 
 	// 该依赖用于编译阶段
 	compile('org.springframework.boot:spring-boot-starter-security')
+	
+	// jdbc连接
+	compile('org.springframework.boot:spring-boot-starter-jdbc')
+	
+	compile('org.springframework.boot:spring-boot-autoconfigure')
 	
 	// mybatis
     compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
@@ -66,7 +69,6 @@ dependencies {
 	compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.2.RELEASE')
 
 	// 添加 OAuth2 的依赖
-	compile('org.springframework.boot:spring-boot-autoconfigure:1.5.2.RELEASE')
 	compile('org.springframework.security.oauth:spring-security-oauth2:2.3.3.RELEASE')
 	//compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
 
